# semigroupoids-slim

./: CHANGELOG.md  LICENSE  README.md  semigroupoids-slim.cabal
.github/workflows/: haskell.yml
src/Data/Functor/Slim/: Alt.hs  Apply.hs  Plus.hs
src/Data/Functor/Slim/Bind/: Class.hs
src/Data/Semigroup/Slim/: Foldable.hs  Traversable.hs
src/Data/Semigroup/Slim/Foldable/: Class.hs
src/Data/Semigroup/Slim/Traversable/: Class.hs
src/Semigroupoids/Slim/: Do.hs
