cabal-version:      3.0
name:               semigroupoids-slim
version:            0.1.0.0
synopsis:
    Slimmed-down fork of semigroupoids with minimal dependencies

-- A longer description of the package.
-- description:
homepage:           https://github.com/hololeap/semigroupoids-slim
bug-reports:        https://github.com/hololeap/semigroupoids-slim/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             Edward A. Kmett, hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
copyright:          Copyright (C) 2011-2015 Edward A. Kmett
                    Copyright (C) 2022 hololeap
category:           Control
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/semigroupoids-slim

common all
    ghc-options:         -Weverything
                         -Wno-missing-exported-signatures
                         -Wno-missing-import-lists
                         -Wno-missed-specialisations
                         -Wno-all-missed-specialisations
                         -Wno-unsafe
                         -Wno-safe
                         -Wno-missing-safe-haskell-mode
                         -Wno-missing-local-signatures
                         -Wno-implicit-prelude
                         -Wno-prepositive-qualified-module
                         -Wno-missing-deriving-strategies
                         -Wno-deriving-typeable
                         -foptimal-applicative-do

library
    import: all
    exposed-modules:
        , Data.Functor.Slim.Bind.Class
        , Data.Functor.Slim.Alt
        , Data.Functor.Slim.Apply
        , Data.Functor.Slim.Plus
        , Semigroupoids.Slim.Do

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
