cabal-version:      3.0
name:               semigroupoids-slim
version:            0.1.0.0
synopsis:
    Slimmed-down fork of semigroupoids with minimal dependencies

tested-with:        GHC == { 8.8.4, 8.10.7, 9.0.2, 9.2.2 }

-- description:
homepage:           https://github.com/hololeap/semigroupoids-slim
bug-reports:        https://github.com/hololeap/semigroupoids-slim/issues

license:            BSD-2-Clause
license-file:       LICENSE
author:             Edward A. Kmett, hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
copyright:          Copyright (C) 2011-2015 Edward A. Kmett
                    Copyright (C) 2022 hololeap
category:           Control
extra-source-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/hololeap/semigroupoids-slim

flag pedantic
    description:    Turn on -Werror
    default:        False
    manual:         True

common all
    ghc-options:         -Wall
                         -foptimal-applicative-do
    if flag(pedantic)
        ghc-options:     -Werror

library
    import: all
    exposed-modules:
        , Data.Functor.Slim.Bind.Class
        , Data.Functor.Slim.Alt
        , Data.Functor.Slim.Apply
        , Data.Functor.Slim.Plus
        , Data.Semigroup.Slim.Foldable
        , Data.Semigroup.Slim.Foldable.Class
        , Data.Semigroup.Slim.Traversable
        , Data.Semigroup.Slim.Traversable.Class
        , Semigroupoids.Slim.Do

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base >=4.13 && <5
    hs-source-dirs:   src
    default-language: Haskell2010
